# robotica

./: .gitignore
TP1/: ejercicio5-ab.py  ejercicio5-c.py  pose_utils.py
TP2/: Dockerfile  README.md  cylinder_detector.py  cylinders.sdf  dump_parser.py  launch.cylinders.py  log.txt  log_circular.txt  log_circular_neg_neg.txt  log_circular_neg_pos.txt  log_circular_pos_neg.txt  log_square.txt  run_square.py
TP2/tb3_empty_world/launch/: tb3_simulation_launch.py
TP3/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  build.sh  frames_2025-10-27_21.32.21.gv  frames_2025-10-28_18.21.23.gv  package.xml  save_matches.py  view_features.py  view_images.py  view_matches.py
TP3/config/: camera_info_left.yaml  camera_info_right.yaml  extrinsics.yaml  minimal_stereo.rviz  simple_stereo.rviz  stereo_vision.rviz
TP3/include/stereo_vision/: dense_reconstructor.hpp  disparity_computer.hpp  feature_extractor.hpp  feature_matcher.hpp  pose_estimator.hpp  stereo_rectifier.hpp  triangulator.hpp  utils.hpp
TP3/launch/: simple_stereo.launch.py  stereo_vision.launch.py
TP3/scripts/: calibrate_cameras.sh  check_dense_mapping.sh  convert_to_rosbag.sh  download_euroc.sh
TP3/src/: dense_reconstructor.cpp  disparity_computer.cpp  feature_extractor.cpp  feature_matcher.cpp  pose_estimator.cpp  stereo_rectifier.cpp  triangulator.cpp  utils.cpp
TP3/src/nodes/: dense_mapper_node.cpp  dense_reconstruction_node.cpp  disparity_node.cpp  feature_extractor_node.cpp  feature_matcher_node.cpp  mapping_node.cpp  pose_estimation_node.cpp  pose_estimator_node.cpp  stereo_pipeline_node.cpp  stereo_rectifier_node.cpp  triangulator_node.cpp
TP4/: CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  NOTES_ON_GAUSS_NEWTON.md  QUICKSTART.md  README.md  RESULTS.txt  plot_2d_results.py  plot_3d_results.py  run_all.sh
TP4/data/: input_INTEL_g2o.g2o
TP4/include/: g2o_reader.h  graph_slam_2d.h  graph_slam_3d.h
TP4/include/utils/: file_utils.h  visualization.h
TP4/src/: g2o_reader.cpp  graph_slam_2d.cpp  graph_slam_3d.cpp  main.cpp
TP4/src/utils/: file_utils.cpp  visualization.cpp
config/: left.yaml
