<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>stereo_vision</name>
    <version>1.0.0</version>
    <description>Stereo Vision Processing for Computer Vision Assignment - 3D Reconstruction and
        Pose Estimation</description>
    <maintainer email="user@todo.com">Maxi</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- ROS2 dependencies -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>message_filters</depend>

    <!-- System dependencies -->
    <depend>eigen</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>